# GameJam001

./: .gitignore  STANDALONE.md  build_windows_onefile.ps1  cups_3d_positions.csv  cups_3d_tracker.py  cups_pixel_ratio_distance.py  cups_wristband_3d_tracker.py  red_blue_preprocess_blobs.csv  red_blue_video_preprocess.py  requirements-packaging.txt  start_camera_pipeline.py  wristband_3d_positions_test.csv
.deps/numpy-2.5.0.dist-info/: RECORD
GameJamCamera/: .gitignore  README.md  pyproject.toml
GameJamCamera/config/: defaults.json
GameJamCamera/recordings/: .gitkeep
GameJamCamera/scripts/: run_config_gui.sh  run_multi_tk.sh
GameJamCamera/src/gamejam_camera/: __init__.py  __main__.py  camera_devices.py  config.py  gui.py  live_camera.py  multi_red_tracking.py  space_preprocess.py
Me/Codex/Project/: 2026-07-03-cup-coordinate.md  2026-07-04-live-camera.md
Step01/: cups_coordinate_svg.py
process_2485/: README.md  space_red_blue_blobs.csv  stabilize_space_mask_preprocess.py  stable_01.md  tune1_3d_hand_foot_positions.csv  tune1_3d_space_calibration.json  tune1_3d_space_red_blue_blobs.csv  tune1_space_calibration.json  tune1_space_red_blue_blobs.csv  tune_frame219_space_calibration.json  tune_frame219_space_red_blue_blobs.csv
process_2487/: stabilize_space_mask_preprocess.py  stable_01.md  track_hand_foot_stable01.py  tune1_3d_hand_foot_positions.csv  tune1_3d_space_calibration.json  tune1_3d_space_red_blue_blobs.csv
process_live/: live_camera_720_clahe.py  mask_tuner_params.txt  mask_tuner_snapshot.py
process_multi_live/: live_multi_red_tracking.py
