[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gamejam-camera"
version = "0.1.0"
description = "Live camera calibration and multi-person red marker tracking for GameJam."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "opencv-python",
]

[project.scripts]
gamejam-camera = "gamejam_camera.multi_red_tracking:main"
gamejam-camera-config = "gamejam_camera.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
